update buildscript and other changes